syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint.airbyte;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint/airbyte;tm_server_airbyte_endpoint";

import "yandex/cloud/priv/sensitive.proto";

message LinkedinAdsSource {
    message Credentials {
        message OAuth {
            string client_id = 1 [(sensitive) = true];
            string client_secret = 2 [(sensitive) = true];
            string refresh_token = 3 [(sensitive) = true];
        }
        oneof credentials {
            OAuth oauth = 1;
            string access_token = 2 [(sensitive) = true];
        }
    }
    string start_date = 1;
    repeated int64 account_ids = 2;
    Credentials credentials = 3;
}
